--- a/conf/application.conf
+++ b/conf/application.conf
@@ -366,6 +366,6 @@ play.mailer {
   port = 587
   ssl = false
   tls = true
-  user = "miklos.rona@innovus.hu"
-  password = "T3Th3ly82"
+  user = "teszt@teszt.hu"
+  password = "password"
 }
